--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -31,17 +31,17 @@ jobs:
           node-version: "12"
       - run: touch .test.env
       - run: |
-          echo 'PORT=5000 \
-          DB_HOST="localhost" \
-          DB_PORT="5432" \
-          DB_NAME="postgres" \
-          DB_USERNAME="postgres" \
-          DB_PASSWORD="postgres" \
-          DB_SYNC=true \
-          DB_LOGS=false \
-          NODE_ENV=test \
-          CLIENT_ORIGIN=http://localhost:3000 \
-          ' >> .test.env \
+          echo 'PORT=5000
+          DB_HOST="localhost"
+          DB_PORT="5432"
+          DB_NAME="postgres"
+          DB_USERNAME="postgres"
+          DB_PASSWORD="postgres"
+          DB_SYNC=true
+          DB_LOGS=false
+          NODE_ENV=test
+          CLIENT_ORIGIN=http://localhost:3000
+          ' >> .test.env
       - run: yarn install
         working-directory: .
       - run: yarn test
