--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.13",
+    "@types/express-serve-static-core": "^4.17.24",
     "@types/jest": "^26.0.23",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
