--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "csv-parser": "^3.0.0",
     "csvtojson": "^2.0.10",
     "install": "^0.13.0",
+    "leaked-handles": "^5.2.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
