add twitter bot status and manage routes

--- a/.example.env
+++ b/.example.env
@@ -7,3 +7,6 @@ DB_PASSWORD="postgres"
 DB_SYNC=false
 DB_LOGS=false
 CLIENT_ORIGIN=http://localhost:3000
+AWS_ACCESS_KEY_ID='access_key_id_here'
+AWS_SECRET_ACCESS_KEY='secret_access_key_here'
+AWS_REGION='ap-southeast-2'
