--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "app.js",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-ec2": "^3.38.0",
     "@types/node": "^14.14.37",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
